Add feature for creating internet trouble
